objects/ASI_KOR_Venue_Depletion__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Depletion_Header_ID__c</fullName>
        <externalId>true</externalId>
        <label>SYS_Depletion Header ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Salesman__c</fullName>
        <label>Salesman</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Editable</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_No_of_Products__c</fullName>
        <label>Total No. of Transaction</label>
        <summaryForeignKey>ASI_KOR_Venue_Depletion_Detail__c.ASI_KOR_Venue_Depletion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Qty_Case__c</fullName>
        <label>Total Qty(Case)</label>
        <summarizedField>ASI_KOR_Venue_Depletion_Detail__c.ASI_KOR_Venue_Depl_Info_Depletion_Case__c</summarizedField>
        <summaryForeignKey>ASI_KOR_Venue_Depletion_Detail__c.ASI_KOR_Venue_Depletion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_promotion_amount__c</fullName>
        <label>Total Promotion Amount</label>
        <summarizedField>ASI_KOR_Venue_Depletion_Detail__c.ASI_KOR_Venue_Depl_Info_Promotion_Amount__c</summarizedField>
        <summaryForeignKey>ASI_KOR_Venue_Depletion_Detail__c.ASI_KOR_Venue_Depletion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue__c</fullName>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Venue Depletions</relationshipLabel>
        <relationshipName>Venue_Depletions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Venue Depletion</label>
    <nameField>
        <displayFormat>VD-{00000}</displayFormat>
        <label>Venue Depletion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Venue Depletions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>